Receiving date in Java client
Look at readline in java client.

--- a/proj2/makefile
+++ b/proj2/makefile
@@ -14,11 +14,30 @@ HEADERS =
 
 default: all 
 
- all: 
+all: server classes
+
+server: 
 	$(CC) ${CFLAGS} ${SRCS} -o ftserver $(LDFLAGS)
 
 test: ftserver.c
 	${CC} -g -v ftserver.c -o test 
 
+
+### Java commands below
+
+JC = javac
+
+.SUFFIXES: .java .class
+
+CLASSES = ftclient.java 
+
+
+.java.class:
+	$(JC) $(JFLAGS) $*.java
+
+classes: $(CLASSES:.java=.class)
+
+
+   
 clean:
-	${RM} -rf ftserver test  *.o 
+	${RM} ftserver test  *.o *.class 
